--- a/MvpModules/WanAndroid/src/main/res/values/strings.xml
+++ b/MvpModules/WanAndroid/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">WanAndroid</string>
+    <string name="app_name">玩Android</string>
+    <string name="open">打开</string>
+    <string name="close">关闭</string>
 </resources>
