--- a/MvpModules/WanAndroid/src/main/res/values/strings.xml
+++ b/MvpModules/WanAndroid/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">玩Android</string>
     <string name="open">打开</string>
     <string name="close">关闭</string>
+    <string name="search">搜索</string>
 </resources>
