搜索页功能实现及代码结构调整

--- a/MvpModules/WanAndroid/src/main/res/values/strings.xml
+++ b/MvpModules/WanAndroid/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="open">打开</string>
     <string name="close">关闭</string>
     <string name="search">搜索</string>
+    <string name="search_keyword">关键词</string>
+    <string name="hot_search">大家都在搜</string>
+    <string name="web_search">常用网站</string>
 </resources>
