--- a/AppModules/DaggerDemo/src/main/res/values/strings.xml
+++ b/AppModules/DaggerDemo/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WanAndroidAdvance</string>
+    <string name="tip_no_more_data">没有更多数据</string>
+    <string name="item_example_number_title">Item %02d</string>
+    <string name="item_example_number_abstract">This is the abstract item %02d</string>
 </resources>
